first pass naive match notebook

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 # ignore all sequence and tree files
-*.fastq.gv
+*.fastq.gz
 *.fas
 *.treefile
+
+# ignore mac system config
+.DS_Store
+
+# ignore jupyter notebook checkpoints
+.ipynb_checkpoints/
